# BabelStream

./: .gitignore  ACC.cmake  ACCStream.cpp  ACCStream.h  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CUDA.cmake  CUDA.make  CUDAStream.cu  CUDAStream.h  DPCPP.make  HC.make  HCStream.cpp  HCStream.h  HIP.make  HIPStream.cpp  HIPStream.cu  HIPStream.h  JimConfigArm.sh  KOKKOS.cmake  KOKKOSStream.cpp  KOKKOSStream.hpp  Kokkos.make  KokkosCPU.make  KokkosCPUMakefile  KokkosGPU.make  KokkosMakefile  KokkosStream.cpp  KokkosStream.hpp  LICENSE  Makefile  OCL.cmake  OCLStream.cpp  OCLStream.h  OMP.cmake  OMP3Stream.cpp  OMP3Stream.h  OMP45Stream.cpp  OMP45Stream.h  (+51 more)
.github/: FUNDING.yml
.github/workflows/: android.yml  main.yaml
CL/: cl2.hpp
JuliaStream.jl/: Manifest.toml  Project.toml  README.md  update_all.sh
JuliaStream.jl/AMDGPU/: Manifest.toml  Project.toml
JuliaStream.jl/CUDA/: Manifest.toml
JuliaStream.jl/KernelAbstractions/: Manifest.toml  Project.toml
JuliaStream.jl/oneAPI/: Manifest.toml  Project.toml
JuliaStream.jl/src/: AMDGPUStream.jl  CUDAStream.jl  DistributedStream.jl  KernelAbstractionsStream.jl  PlainStream.jl  Stream.jl  StreamData.jl  ThreadedStream.jl  oneAPIStream.jl
cmake/: register_models.cmake  shim_onedpl.cmake
cpp/: .gitignore  HIP.cmake  HIP.make  KokkosStream.cpp  OMPStream.cpp  OpenCL.make
cpp/legacy/: HC.make
docs/: spack_instructions.md
java-stream/: pom.xml
legacy/: HCStream.h  Makefile
results/: opencl-results.csv
results/cuda/: nvidia-gtx-780-ti.txt  nvidia-gtx-980.txt  nvidia-gtx-titan_x.txt  nvidia-k20c-ecc-on.txt  nvidia-k40c-ecc-off.txt  nvidia-k40c.txt  nvidia-k80-ecc-off.txt  nvidia-k80-ecc-on.txt
results/opencl/: amd-a10-7850k-radeon-r7.txt  amd-firepro-s10000.txt  amd-firepro-s9150-ecc-off.txt  amd-radeon-7970.txt  amd-radeon-r9-290x.txt  amd-radeon-r9-295x2.txt  column_Intel_Phi_3120A.txt  column_NVIDIA_Tesla_C2070.txt  column_intel_phi_3120A.txt  column_intel_xeon_E5_2697.txt  column_nvidia_tesla_C2070.txt  intel-phi-3120A-ecc-off.txt  intel-phi-3120A-ecc-on.txt  intel-phi-se10p.txt  intel-xeon-E5-2697-numa-48-cores.txt  nvidia-gtx-580.txt  nvidia-gtx-780-ti.txt  nvidia-gtx-980-ti.txt  nvidia-gtx-980.txt  nvidia-k20c-ecc-off.txt  nvidia-k20c-ecc-on.txt  nvidia-k40c-ecc-off.txt  nvidia-k40c-ecc-on.txt  nvidia-k80-ecc-off.txt  nvidia-k80-ecc-on.txt
results/v1.0/: opencl-results.xlsx
results/v1.0/cuda/: nvidia-gtx-580.txt  nvidia-gtx-980-ti.txt  nvidia-k20c-ecc-off.txt  nvidia-k40c-ecc-on.txt
results/v1.0/hip/: amd-fiji-nano.txt
results/v1.0/opencl/: amd-firepro-s10000.txt  amd-r9-fury-x.txt  amd-radeon-r9-290x.txt  nvidia-gtx-980-ti.txt  nvidia-gtx-980.txt  nvidia-k20c-ecc-on.txt  nvidia-k40c-ecc-on.txt  nvidia-k80-ecc-off.txt
results/v2.0/acc-cray/: K20X.txt
results/v2.0/acc-pgi-kernel/: broadwell.txt  ivybridge.txt  sandybridge.txt
results/v2.0/acc-pgi-loops/: 980Ti.txt  IvyBridge.txt  S9150.txt
results/v2.0/broadwell/: acc-pgi-loops.txt  mccalpin-cray.txt  omp-cray.txt  raja-gcc.txt
results/v2.0/cuda-cray/: K40.txt
results/v2.0/cuda-gnu/: 980ti.txt  K20X.txt
results/v2.0/cuda-x86/: Haswell.txt
results/v2.0/furynano/: hip.txt
results/v2.0/furyx/: ocl.txt  sycl.txt
results/v2.0/k20x/: raja.txt
rust-stream/: Cargo.toml  README.md  rustfmt.toml
rust-stream/src/: arc_stream.rs  crossbeam_stream.rs  lib.rs  main.rs  plain_stream.rs  stream.rs
rust-stream/tests/: integration_test.rs
scala-stream/: .jvmopts  .scalafmt.conf  build.sbt
scala-stream/project/: plugins.sbt
src/: .gitignore  CMakeLists.txt  CUDAStream.cu  CUDAStream.h  OCLStream.cpp  OCLStream.h  Stream.h  StreamModels.h  Unit.h  benchmark.h  ci-prepare-bionic.sh  ci-test-compile.sh  common.h  common.h.in  compiler.h  dpl_shim.h  main.cpp  register_models.cmake  sycl_ext_enqueue_functions.h  version.h.in
src/acc/: ACCStream.cpp  ACCStream.h  Makefile
src/cuda/: CUDAStream.cu  CUDAStream.h  Makefile  model.cmake
src/fortran/: ArrayStream.F90  BabelStreamTypes.F90  CUDAKernelStream.F90  CUDAStream.F90  DoConcurrentStream.F90  Makefile  OpenACCArrayStream.F90  OpenACCStream.F90  OpenMPStream.F90  OpenMPTargetLoopStream.F90  OpenMPTargetStream.F90  OpenMPTaskloopStream.F90  OpenMPWorkshareStream.F90  SequentialStream.F90  build.sh  main.F90  make.inc.amd  make.inc.arm  make.inc.cray  make.inc.fj  make.inc.flang  make.inc.gcc  make.inc.nvhpc  make.inc.oneapi  run.sh
src/futhark/: FutharkStream.cpp  FutharkStream.h  babelstream.fut  model.cmake
src/hip/: HIPStream.cpp  HIPStream.h  Makefile  model.cmake
src/kokkos/: KokkosStream.cpp  KokkosStream.hpp  Makefile  model.cmake
src/legacy/: HCStream.cpp  HCStream.h
src/musa/: MUSAStream.h  MUSAStream.mu  model.cmake
src/ocl/: Makefile  OCLStream.cpp  OCLStream.h  model.cmake
src/omp/: Makefile  OMPStream.cpp  OMPStream.h  model.cmake
src/raja/: Makefile  RAJAStream.cpp  RAJAStream.hpp  model.cmake
src/rust/rust-stream/: Cargo.toml  rustfmt.toml
src/rust/rust-stream/src/: crossbeam_stream.rs  lib.rs  main.rs  plain_stream.rs  rayon_stream.rs  stream.rs  unsafe_stream.rs
src/rust/rust-stream/tests/: integration_test.rs
src/serial/: SerialStream.cpp  SerialStream.h  model.cmake
src/std/: Makefile  STDStream.cpp  STDStream.h  model.cmake
src/std-data/: STDDataStream.cpp  STDDataStream.h  model.cmake
src/std-indices/: STDIndicesStream.cpp  STDIndicesStream.h  model.cmake
src/std-ranges/: STDRangesStream.cpp  STDRangesStream.hpp  model.cmake
src/std20/: Makefile  STD20Stream.cpp
src/sycl/: Makefile  SYCLStream.cpp  SYCLStream.h  model.cmake
src/sycl-ai/: SYCLStream.cpp  SYCLStream.h
src/sycl2020/: .SYCLStream2020.h.swp  SYCLStream2020.cpp  SYCLStream2020.h  model.cmake
src/sycl2020-acc/: SYCLStream2020.cpp  SYCLStream2020.h  model.cmake
src/sycl2020-usm/: SYCLStream2020.cpp  SYCLStream2020.h  model.cmake
src/syclusm/: SYCLStream.cpp  SYCLStreamUSM.h
src/tbb/: TBBStream.cpp  TBBStream.hpp  model.cmake
src/thrust/: THRUST.cmake  ThrustStream.cu  ThrustStream.h  model.cmake
src/vecpar/: VecparStream.cpp  VecparStream.hpp  model.cmake
(+127 files in other folders)
