[package]
name = "rust-stream"
version = "4.0.0"
authors = ["Wei-Chen Lin <wl14928@bristol.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
structopt = "0.3.13"
tabular = "0.1.4"
rayon = "1.5.1"
crossbeam = "0.8.1"
num_cpus = "1.13.0"
rustversion = "1.0"
libc = "0.2.97"
core_affinity = "0.5.10"
colour = "0.6.0"

[dev-dependencies]
rstest = "0.10.0"

[build-dependencies]
rustversion = "1.0"

[profile.dev]
opt-level = 2
overflow-checks = true


[profile.release]
opt-level = 3
lto = "thin" # fully enabling this (i.e true) negatively affects performance as tested on both AMD and Intel
