[package]
name = "rust-stream"
version = "5.0.0"
authors = ["Wei-Chen Lin <wl14928@bristol.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
structopt = "0.3.26"
tabular = "0.2.0"
rayon = "1.5.3"
crossbeam = "0.8.2"
num_cpus = "1.13.1"
rustversion = "1.0.9"
libc = "0.2.134"
core_affinity = "0.5.10"
colour = "0.6.0"

[dev-dependencies]
rstest = "0.13.0"

[build-dependencies]
rustversion = "1.0"

[profile.dev]
opt-level = 2
overflow-checks = true


[profile.release]
opt-level = 3
lto = "thin" # fully enabling this (i.e true) negatively affects performance as tested on both AMD and Intel
